TEST_PROGRAMS/INVALID/evan_mcilroy/invalid_four.min
while x do x done

while x do if while x do x done done

var 8: int;

int x: float;
